# openalex-pipeline

./: .env.example  .envrc  .gitignore  AGENTS.md  ARCHITECTURE.md  CLAUDE.md  DATA_MODEL.md  PLAN.md  README.md  REVIEW.md  SPECS.md  STACK.md  STATE.md  TODO.md  dagster.yaml  pyproject.toml  topics_tree.json
dbt/: .gitignore  dbt_project.yml  profiles.yml
dbt/models/gold/: _gold.yml  gold_ai_share_by_year.sql  gold_citation_gini_by_subfield.sql  gold_citation_half_life_by_subfield.sql  int_paper_half_life.sql
dbt/tests/: assert_gold_ai_subfield_present.sql  assert_gold_strict_share_lte_broad_share.sql  assert_publication_date_parses.sql  assert_silver_works_rowcount_matches_staging.sql  assert_updated_date_parses.sql
docs/: DATA_MODEL.md  SPECS.md  STACK.md  architecture.md  bronze-design.md  downloader-specs.md  extraction-design.md  extraction-module-design.md  extraction-module-report.md  extraction_policy.md  gold-design.md  ingestion-design.md  openalex-api-reference.md  openalex-cli.md  openalex-deprecations.md  openalex-llms.md  openalex-works-overview.md  orchestration-design.md  plan.md  repo-structure-plan.md  silver-design.md  staging-design.md  upload-design.md
docs/adr/: 001-ai-topic-classification.md  002-extraction-nonblocking-count-check.md  003-bronze-nested-fields-as-json-strings.md  004-bronze-manifest-only-provenance.md  005-bronze-nonblocking-uniqueness-assertion.md
docs/design-archive/: bronze-test-design.md  upload-design.md
scripts/: bronze_ingest_spike.py  build_topics_tree.py  diagnose_downloads.py  openalex_downloader.py
terraform/: bigquery.tf  iam.tf  main.tf  outputs.tf  providers.tf  storage.tf  variables.tf  versions.tf
tests/bronze/: conftest.py  test_core.py  test_main.py  test_manifest.py  test_runner.py
tests/extraction/: __init__.py  conftest.py  test_config.py  test_connector.py  test_connector_contract.py  test_http.py  test_main.py  test_models.py  test_runner.py  test_scan.py  test_settings.py  test_storage.py  test_worker.py
tests/orchestration/: test_cloud.py  test_config.py  test_convergence.py  test_dbt_prep.py  test_definitions.py  test_instance.py  test_invalidate.py  test_lock.py
tests/upload/: conftest.py  test_upload.py
(+42 files in other folders)
